@@ -239,31 +239,6 @@
               if (!organizer.commonName || !organizer.commonName.length) {
                   organizer.commonName = calendar.getProperty("organizerCN");
               }
-
-	      // For CalDAV calendars, we check if the organizerID is different from our
-	      // calendar-user-address-set. The organzerID is the owner of the calendar.
-	      // If it's different, that is because someone is acting on behalf of
-	      // the organizer.
-	      if (calendar.type == "caldav") {
-	        var aclMgr = Components.classes["@inverse.ca/calendar/caldav-acl-manager;1"]
-                        .getService(Components.interfaces.nsISupports)
-                        .wrappedJSObject;
-
-                var entry = aclMgr.calendarEntry(calendar.uri);		
-		var found = false;
-		var identity;
-
-		for (var i = 0; i < entry.userAddresses.length; i++) {
-	  	  identity = entry.userAddresses[i].toLowerCase();
-		  if (organizer.id.toLowerCase() == identity) {
-		    found = true;
-		  }
-		}
-		  
-		if (!found && entry.userAddresses.length > 0) {
-		   organizer.setProperty("SENT-BY", entry.userAddresses[0]);
-		}
-	      }
 	       
               organizer.isOrganizer = true;
               this.appendAttendee(organizer, listbox, template, true);
