@@ -7,7 +7,9 @@
 	so we correctly mark the calendar as a read-only one
 	when there's a network error.
 	* Bumped version number to 0.9.1pre7
-
+	* Moved the SENT-BY so we can handle the case when
+	the calendar changes after having defined the attendees.
+	
 2008-11-28  Ludovic Marcotte  <lmarcotte@inverse.ca>
 
 	* We now allow the creation of cached
